# llm-translator

./: .dockerignore  .env.example  .gitignore  README.md  REQUIREMENTS.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_translations.py
backend/app/: celery_app.py  config.py  db.py  exceptions.py  main.py  ml_client.py  models.py  schemas.py  tasks.py
backend/app/routers/: health.py  history.py  translate.py
frontend/: Dockerfile  index.html  nginx.frontend.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ServiceErrorBanner.tsx
frontend/src/pages/: HistoryPage.tsx  StatsPage.tsx  TranslatePage.tsx
monitoring/grafana/dashboards/: backend-overview.json
proxy/: nginx.conf
worker/: Dockerfile
